ajustes fronted inventarios

--- a/base/templates/AdminLTE/index.html
+++ b/base/templates/AdminLTE/index.html
@@ -176,6 +176,7 @@
             </span>
           </a>
           <ul class="treeview-menu">
+            <li class=""><a href="{% url 'inventario' %}"><i class="fa fa-circle-o"></i> Inventario</a></li>
             <li class=""><a href="{% url 'movimiento' %}"><i class="fa fa-circle-o"></i> Movimientos</a></li>
           </ul>
         </li>
