--- a/base/templates/clientes/listar.html
+++ b/base/templates/clientes/listar.html
@@ -36,5 +36,5 @@
 			{% endfor %}
 		</tbody>
 	</table>
-	<button class="btn btn-success"><a href="{% url 'crear_cliente' %}">Crear</a></button>
+	<a class="btn btn-success" href="{% url 'crear_cliente' %}">Crear</a>
 {% endblock content %}
