--- a/base/templates/proveedores/listar.html
+++ b/base/templates/proveedores/listar.html
@@ -30,6 +30,6 @@
 			{% endfor %}
 		</tbody>
 	</table>	
-					<button class="btn btn-success"><a href="{% url 'crear_proveedor' %}">Nuevo</a></button>
+	<a class="btn btn-success" href="{% url 'crear_proveedor' %}">Nuevo</a>
 
 {% endblock content %}
