--- a/catalogo/templates/catalogo/listar.html
+++ b/catalogo/templates/catalogo/listar.html
@@ -28,5 +28,5 @@
 			{% endfor %}
 		</tbody>
 	</table>
-	<button class="btn btn-success"><a href="{% url 'catalogo' %}">Crear</a></button>
+	<a class="btn btn-success" href="{% url 'catalogo' %}">Crear</a>
 {% endblock content %}
