--- a/facturacion/templates/factura/listar.html
+++ b/facturacion/templates/factura/listar.html
@@ -30,5 +30,5 @@
 			{% endfor %}
 		</tbody>
 	</table>
-	<button class="btn btn-success"><a href="{% url 'facturacion' %}">Crear</a></button>
+	<a class="btn btn-success" href="{% url 'facturacion' %}">Crear</a>
 {% endblock content %}
