--- a/inventario/templates/inventario/listar.html
+++ b/inventario/templates/inventario/listar.html
@@ -27,5 +27,5 @@
 			{% endfor %}
 		</tbody>
 	</table>
-	<button class="btn btn-success"><a href="{% url 'inventario_crear' %}">Crear</a></button>
+	<a class="btn btn-success" href="{% url 'inventario_crear' %}">Crear</a>
 {% endblock content %}
