--- a/base/templates/clientes/borrar.html
+++ b/base/templates/clientes/borrar.html
@@ -4,6 +4,6 @@
 {% block content %}
 	<form action="" method="post">{% csrf_token %}
 		<p>Desea borrar el cliente "{{ object.nombre }}"?</p>
-		<input type="submit" value="Si" />
+		<input type="submit" class="btn btn-success" value="Si" />
 	</form>
 {% endblock content %}
