--- a/base/templates/productos/actualizar.html
+++ b/base/templates/productos/actualizar.html
@@ -2,6 +2,6 @@
 {% block content %}
 	<form action="" method="post">{% csrf_token %}
 		{{ form.as_p }}
-		<input type="submit" value="Update" />
+		<input type="submit" class="btn btn-success" value="Update" />
 	</form>
 {% endblock content %}
