--- a/base/templates/productos/borrar.html
+++ b/base/templates/productos/borrar.html
@@ -2,6 +2,6 @@
 {% block content %}
 	<form action="" method="post">{% csrf_token %}
 		<p>Desea borrar el producto "{{ object.nombre }}"?</p>
-		<input type="submit" value="Si" />
+		<input type="submit" class="btn btn-success" value="Si" />
 	</form>
 {% endblock content %}
