--- a/base/templates/productos/create.html
+++ b/base/templates/productos/create.html
@@ -4,6 +4,6 @@
 	<form method="post">
 		{% csrf_token %}
 		{{ form.as_p }}
-		<input type="submit" value="Guardar" />
+		<input class="btn btn-success" type="submit" value="Guardar" />
 	</form>
 {% endblock content %}
