--- a/facturacion/templates/reportes/index.html
+++ b/facturacion/templates/reportes/index.html
@@ -11,7 +11,7 @@
 		<h1>ingrese fecha de facturacion</h1>
 		<input type="text" name="fini">
 		<input type="text" name="ffin">
-		<input type="submit" value="ver" />
+		<input type="submit" class="btn btn-success" value="ver" />
 	</form>
 {% endblock content %}
 
