--- a/inventario/templates/inventario/crear.html
+++ b/inventario/templates/inventario/crear.html
@@ -11,7 +11,7 @@
 	<form method="post" id="form_detalle" @submit.prevent="invFormCreateAddDetalle">
 		{% csrf_token %}
 		{{ form_detalle.as_p }}
-		<input type="submit" value="Guardar" />
+		<input type="submit" class="btn btn-success" value="Guardar" />
 	</form>
 <table class="table">
 	<thead>
@@ -31,12 +31,12 @@
 				<input v-model="producto.costo" @change="invFormCreateUpdateeVT(producto)" type="number"> </td>
 			<td> [[ producto.valor_total ]] </td>
 			<td>
-				<button @click="invFormCreateDeleteProducto(producto)">Borrar</button>
+				<button class="btn btn-danger" @click="invFormCreateDeleteProducto(producto)">Borrar</button>
 			</td>
 		</tr>
 	</tbody>
 </table>
-<input type="button" value="Facturar" @click="invFormCreateFacturar" />
+<input type="button" class="btn btn-success" value="Facturar" @click="invFormCreateFacturar" />
 
 {% endblock content %}
 
