--- a/inventario/templates/inventario/detalle.html
+++ b/inventario/templates/inventario/detalle.html
@@ -11,7 +11,7 @@
 				<th>id</th>
 				<th>Producto</th>
 				<th>Cantidad</th>
-				<th>valor</th>
+				<th>Valor Total</th>
 			</tr>
 		</thead>
 		<tbody>
