--- a/inventario/templates/inventario/listar.html
+++ b/inventario/templates/inventario/listar.html
@@ -7,8 +7,8 @@
 		<thead>
 			<tr>
 				<th>Nombre</th>
-				<th>fecha_creacion</th>
-				<th>factualizacion</th>
+				<th>Fecha</th>
+				<th>Fecha Actualizacion</th>
 			</tr>
 		</thead>
 		<tbody>
