--- a/base/templates/AdminLTE/index.html
+++ b/base/templates/AdminLTE/index.html
@@ -48,6 +48,13 @@
     .navbar {
       display: inherit !important;
     }
+    .btn-fixed{
+      position: fixed;
+      top: 60px;
+      right: 30px;
+      width:  200px;
+      z-index: 99999999999;
+    }
   </style>
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
@@ -502,10 +509,8 @@
 <script src="{% static 'js/AdminLTE/bootstrap/js/bootstrap.min.js' %}"></script>
 <!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
   crossorigin="anonymous"></script>-->
-<script src="https://unpkg.com/popper.js@1.12.5/dist/umd/popper.js" integrity="sha384-KlVcf2tswD0JOTQnzU4uwqXcbAy57PvV48YUiLjqpk/MJ2wExQhg9tuozn5A1iVw"
-  crossorigin="anonymous"></script>
-<script src="https://unpkg.com/bootstrap-material-design@4.0.0-beta.3/dist/js/bootstrap-material-design.js" integrity="sha384-hC7RwS0Uz+TOt6rNG8GX0xYCJ2EydZt1HeElNwQqW+3udRol4XwyBfISrNDgQcGA"
-  crossorigin="anonymous"></script>
+<script src="https://unpkg.com/popper.js@1.12.5/dist/umd/popper.js" integrity="sha384-KlVcf2tswD0JOTQnzU4uwqXcbAy57PvV48YUiLjqpk/MJ2wExQhg9tuozn5A1iVw" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/bootstrap-material-design@4.0.0-beta.3/dist/js/bootstrap-material-design.js" integrity="sha384-hC7RwS0Uz+TOt6rNG8GX0xYCJ2EydZt1HeElNwQqW+3udRol4XwyBfISrNDgQcGA" crossorigin="anonymous"></script>
 <script>$(document).ready(function () { 
   $("input, select").addClass("form-control"); 
   $("button, input.btn, a.btn").addClass("btn btn-raised"); 
