--- a/base/templates/registration/login.html
+++ b/base/templates/registration/login.html
@@ -1,67 +1,127 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        
-        <link href= "https://fonts.googleapis.com/css?family=Playfair+Display:900|Raleway:300" rel="style" href="style.css"/>
-   
-    </head>
-    <body bgcolor="#8181F7" background="http://www.grandespymes.com.ar/wp-content/uploads/2016/07/aumento-de-ventas.jpg">
-   
-{% extends 'index.html' %}
+{% load static %}
 
-{% block content %}
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.0.0-beta.3/dist/css/bootstrap-material-design.min.css"/>
+
+    <title>Forsales</title>
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="{% static 'css/AdminLTE/bootstrap/css/bootstrap.min.css' %}">
+
+    <!-- Custom styles for this template -->
+    <style>
+            html, body{
+       font-size: 16px !important;
+    }
+        body {
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background-color: #eee;
+        }
+
+        .form-signin {
+        max-width: 330px;
+        padding: 15px;
+        margin: 0 auto;
+        }
+        .form-signin .form-signin-heading,
+        .form-signin .checkbox {
+        margin-bottom: 10px;
+        }
+        .form-signin .checkbox {
+        font-weight: normal;
+        }
+        .form-signin .form-control {
+        position: relative;
+        height: auto;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box;
+        padding: 10px;
+        font-size: 16px;
+        }
+        .form-signin .form-control:focus {
+        z-index: 2;
+        }
+        .form-signin input[type="email"] {
+        margin-bottom: -1px;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0;
+        }
+        .form-signin input[type="password"] {
+        margin-bottom: 10px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        }
+
+    </style>
+</head>
+
+<body background="http://www.grandespymes.com.ar/wp-content/uploads/2016/07/aumento-de-ventas.jpg">
+
+    <div class="container">
+
 
 {% if form.errors %}
 <p>
-Su nombre de usuario y contraseña no coinciden. Por favor, inténtelo de nuevo.</p>
-{% endif %}
+    Su nombre de usuario y contraseña no coinciden. Por favor, inténtelo de nuevo.</p>
+{% endif %} {% if next %} {% if user.is_authenticated %}
+<p>
+    Su cuenta no tiene acceso a esta página. Para proceder, por favor Iniciar sesión with an account that has access.</p>
+{% else %}
+<p>por favor inicia sesión para acceder a la pagina.</p>
+{% endif %} {% endif %}
 
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>
-Su cuenta no tiene acceso a esta página. Para proceder,
-    por favor Iniciar sesión with an account that has access.</p>
-    {% else %}
-    <p>por favor inicia sesión para acceder a la pagina.</p>
-    {% endif %}
-{% endif %}
+        <form class="form-signin" method="post" action="{% url 'login' %}">
+             {% csrf_token %}
+            <h2 class="form-signin-heading">Login Forsales</h2>
+            <label for="inputEmail" class="sr-only">Usuario</label>
+            <!-- {{ form.username }} -->
+            <input placeholder="Usuario" autofocus="" id="id_username" maxlength="254" name="username" type="text" required="" class="form-control">
+            <!-- <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus=""> -->
+            <label for="inputPassword" class="sr-only">Constraseña</label>
+            <!-- <input type="password" id="inputPassword" class="form-control" placeholder="Password" required=""> -->
+            <!-- {{ form.password }} -->
+            <input placeholder="Contraseña" id="id_password" name="password" type="password" required="" class="form-control">
+            
+            <input type="hidden" name="next" value="{{ next }}" />
 
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Ingresar</button>
+        </form>
 
-<form method="post" action="{% url 'login' %}">
-<center><form method="POST" action="" id="registro"/>
-{% csrf_token %}
-<fieldset style="border-radius: 1px; width: 40%; background-color: white ">
-            <center></center>
-             <img src="https://scontent.fbog2-2.fna.fbcdn.net/v/t1.0-9/1779810_573860442742653_5698543687150728789_n.jpg?oh=3c0ca931e51c571540c03022e2688f70&oe=5930A905" width="300" height="300">
-        <h1 style="font-size: 50px; font-weight: bold; font-family: cursive;" ><legend></legend> </h1>  
-   
-    
-    <form="registro" >
-              
-    <center><h1> NOMBRE: </h1></center>
-            {{ form.username }}
-    
-   
-    <center><h1>CONTRASEÑA:</h1></center>    
-            {{ form.password }}
-    <br><br>
-    
-    <br>
-
-   
+    </div>
+    <!-- /container -->
 
 
-<center>
- <form>
-<input style="width: 150px; padding: 10px; cursor: pointer; box-shadow: 6px 6px 5px; #999; -webkit-box-shadow: 6px 6px 5px #999; -moz-box-shadow: 6px 6px 5px #999; font-weight: bold; background: #A9D0F5; color: #000; border-radius: 10px; border: 1px solid #999; font-size: 150%;"  type="submit"   value="ingresar" />
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<!-- jQuery 2.2.3 -->
+<script src="{% static 'js/AdminLTE/plugins/jQuery/jquery-2.2.3.min.js' %}"></script>
+<!-- jQuery UI 1.11.4 -->
+<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+<!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+<script>
+    $.widget.bridge('uibutton', $.ui.button);
+</script>
+<script src="https://unpkg.com/popper.js@1.12.5/dist/umd/popper.js" integrity="sha384-KlVcf2tswD0JOTQnzU4uwqXcbAy57PvV48YUiLjqpk/MJ2wExQhg9tuozn5A1iVw" crossorigin="anonymous"></script>
 
-<input  type="hidden"  name="next" value="{{ next }}" />
-</form>
-</fieldset>
-</center>
-</form>
+<!-- Bootstrap 3.3.6 -->
+<script src="{% static 'js/AdminLTE/bootstrap/js/bootstrap.min.js' %}"></script>
+<script src="https://unpkg.com/bootstrap-material-design@4.0.0-beta.3/dist/js/bootstrap-material-design.js" integrity="sha384-hC7RwS0Uz+TOt6rNG8GX0xYCJ2EydZt1HeElNwQqW+3udRol4XwyBfISrNDgQcGA" crossorigin="anonymous"></script>
 
+<script>
+    $("input, select").addClass("form-control");
+    $("button, input.btn, a.btn").addClass("btn btn-raised");
+    $('body').bootstrapMaterialDesign(); 
+</script>
 
-{% endblock %}
+</body>
 
 </html>
