--- a/facturacion/templates/factura/create.html
+++ b/facturacion/templates/factura/create.html
@@ -1,42 +1,42 @@
 {% extends 'AdminLTE/index.html' %}
 
 {% block content %}
-	<form method="post" id="form">
+	<form method="post" id="form" @submit.prevent="facFormCreateFacturar">
 		<input type="hidden" id="factura_pk">
 		{{ form.as_p }}
 	</form>
+		<div class="card card-default">
+			<div class="card-body">
+			<form method="post" id="form_detalle" @submit.prevent="facFormCreateAddDetalle">
+				{{ form_detalle.as_p }}
+				<input type="submit" class="btn btn-success" value="Guardar" />
+			</form>
+
+
+			<table class="table">
+				<thead>
+					<tr>
+						<th> Producto </th>
+						<th> Cantidad  </th>
+						<th> Valor Unitario  </th>
+						<th> Valor Total  </th> 
+					</tr>
+				</thead>
+				<tbody>
+					<tr v-for="producto in facturacion.forms.create.productos">
+						<td> [[ producto.producto ]] </td>
+						<td> <input v-model="producto.cantidad" @change="facFormCreateUpdateeVT(producto)" type="number" > </td>
+						<td> <input v-model="producto.valor" @change="facFormCreateUpdateeVT(producto)" type="number" > </td>
+						<td> [[ producto.valor_total ]] </td>
+						<td> <button class="btn btn-danger" @click="facFormCreateDeleteProducto(producto)">Borrar</button></td>
+					</tr>
+				</tbody>
+			</table>
+	</div>
+	</div>
 	
-	<form method="post" id="form_detalle" @submit.prevent="facFormCreateAddDetalle">
-		{{ form_detalle.as_p }}
-		<input type="submit" class="btn btn-success" value="Guardar" />
-	</form>
-	
-	<table class="table">
-		<thead>
-			<tr>
-				<th> producto </th>
-				<th> cantidad  </th>
-				<th> valor  </th>
-				<th> valor_total  </th> 
-			</tr>
-		</thead>
-		<tbody>
-			<tr v-for="producto in facturacion.forms.create.productos">
-				<td> [[ producto.producto ]] </td>
-				<td> <input v-model="producto.cantidad" @change="facFormCreateUpdateeVT(producto)" type="number" > </td>
-				<td> <input v-model="producto.valor" @change="facFormCreateUpdateeVT(producto)" type="number" > </td>
-				<td> [[ producto.valor_total ]] </td>
-				<td> <button class="btn btn-danger" @click="facFormCreateDeleteProducto(producto)">Borrar</button></td>
-			</tr>
-		</tbody>
-	</table>
-	<input type="button" class="btn btn-success" value="Facturar" @click="facFormCreateFacturar" />
+	<input type="submit" class="btn btn-success btn-fixed" value="Facturar" form="form" />
 
 
 {% endblock content %}
 
-{% block scripts %}
-	<script type="text/javascript">
-		$("#id_factura").closest("p").remove()
-	</script>
-{% endblock scripts %}
