--- a/facturacion/templates/factura/listar.html
+++ b/facturacion/templates/factura/listar.html
@@ -7,10 +7,10 @@
 		<thead>
 			<tr>
 				
-				<th>id</th>
-				<th>fecha_creacion</th>
-				<th>factualizacion</th>
-				<th>valor_total</th>
+				<th>Id</th>
+				<th>Fecha</th>
+				<th>Fecha Actualización</th>
+				<th>Total</th>
 			</tr>
 		</thead>
 		<tbody>
