--- a/inventario/templates/inventario/crear.html
+++ b/inventario/templates/inventario/crear.html
@@ -1,42 +1,45 @@
 {% extends 'AdminLTE/index.html' %}
 
 {% block content %}
-	<form method="post" id="form">
+	<form method="post" id="form" @submit.prevent="invFormCreateFacturar">
 		<input type="hidden" id="inventario_pk">
 
 		{% csrf_token %}
 		{{ form.as_p }}
 	</form>
-
-	<form method="post" id="form_detalle" @submit.prevent="invFormCreateAddDetalle">
-		{% csrf_token %}
-		{{ form_detalle.as_p }}
-		<input type="submit" class="btn btn-success" value="Guardar" />
-	</form>
-<table class="table">
-	<thead>
-		<tr>
-			<th> producto </th>
-			<th> cantidad </th>
-			<th> valor </th>
-			<th> valor_total </th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr v-for="producto in inventarios.forms.create.productos">
-			<td> [[ producto.producto ]] </td>
-			<td>
-				<input v-model="producto.cantidad" @change="invFormCreateUpdateeVT(producto)" type="number"> </td>
-			<td>
-				<input v-model="producto.costo" @change="invFormCreateUpdateeVT(producto)" type="number"> </td>
-			<td> [[ producto.valor_total ]] </td>
-			<td>
-				<button class="btn btn-danger" @click="invFormCreateDeleteProducto(producto)">Borrar</button>
-			</td>
-		</tr>
-	</tbody>
-</table>
-<input type="button" class="btn btn-success" value="Facturar" @click="invFormCreateFacturar" />
+		<div class="card card-default">
+			<div class="card-body">
+			<form method="post" id="form_detalle" @submit.prevent="invFormCreateAddDetalle">
+				{% csrf_token %}
+				{{ form_detalle.as_p }}
+				<input type="submit" class="btn btn-success" value="Guardar" />
+			</form>
+			<table class="table">
+				<thead>
+					<tr>
+						<th> Producto </th>
+						<th> Cantidad </th>
+						<th> Valor Unitario </th>
+						<th> Valor Total </th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr v-for="producto in inventarios.forms.create.productos">
+						<td> [[ producto.producto ]] </td>
+						<td>
+							<input v-model="producto.cantidad" @change="invFormCreateUpdateeVT(producto)" type="number"> </td>
+						<td>
+							<input v-model="producto.costo" @change="invFormCreateUpdateeVT(producto)" type="number"> </td>
+						<td> [[ producto.valor_total ]] </td>
+						<td>
+							<button class="btn btn-danger" @click="invFormCreateDeleteProducto(producto)">Borrar</button>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		</div>
+<input type="submit" class="btn btn-success btn-fixed" value="Facturar" form="form" />
 
 {% endblock content %}
 
