--- a/base/templates/AdminLTE/index.html
+++ b/base/templates/AdminLTE/index.html
@@ -56,6 +56,11 @@
       z-index: 99999999999;
     }
   </style>
+    <style type="text/css">
+      #map {
+        height: 300px;
+      }
+    </style>
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper" id="vue-root">
