--- a/rutas/templates/rutas.html
+++ b/rutas/templates/rutas.html
@@ -1,12 +1,8 @@
 {% extends 'AdminLTE/index.html' %}
 
 {% block content %}
-	<style type="text/css">
-		#map {
-				height: 300px;
-			}
-	</style>
-	<section id="map"> </section>
+
+	<div id="map"> </div>
 
 {% endblock content %}
 {% block scripts %}
