--- a/base/templates/clientes/actualizar.html
+++ b/base/templates/clientes/actualizar.html
@@ -19,7 +19,7 @@
 
 {% endblock content %}
 {% block scripts %}
-<script type="text/javascript" src='http://maps.google.com/maps/api/js?sensor=false&libraries=places&key=AIzaSyBIPRP1nZtRNuSSGzaANaE5GJIWo_BP_lc'></script>
+<script type="text/javascript" src='https://maps.google.com/maps/api/js?sensor=false&libraries=places&key=AIzaSyBIPRP1nZtRNuSSGzaANaE5GJIWo_BP_lc'></script>
 <script src="{% static 'js/jquery-locationpicker-plugin/dist/locationpicker.jquery.js' %}"></script>
 <script>
   $('#somecomponent').locationpicker({
