--- a/base/templates/clientes/create.html
+++ b/base/templates/clientes/create.html
@@ -18,7 +18,7 @@
 <div id="somecomponent" style="width: 500px; height: 400px;"></div>
 {% endblock content %}
 {% block scripts %}
-	<script type="text/javascript" src='http://maps.google.com/maps/api/js?sensor=false&libraries=places&key=AIzaSyBIPRP1nZtRNuSSGzaANaE5GJIWo_BP_lc'></script>
+	<script type="text/javascript" src='https://maps.google.com/maps/api/js?sensor=false&libraries=places&key=AIzaSyBIPRP1nZtRNuSSGzaANaE5GJIWo_BP_lc'></script>
 	<script src="{% static 'js/jquery-locationpicker-plugin/dist/locationpicker.jquery.js' %}"></script>
 	<script>
 		$('#somecomponent').locationpicker({
