--- a/base/templates/clientes/create.html
+++ b/base/templates/clientes/create.html
@@ -8,20 +8,31 @@
     <legend>Clientes</legend>
     {% csrf_token %}
     {{ form|bootstrap }}
-    <div class="form-group">
+
+	<div class="form-group bmd-form-group is-filled">
+		<label for="id_ruta_activa" class="control-label   bmd-label-static">Dirección</label>
+		<div class=" ">
+			<input
+			id="map-address"
+			maxlength="1" class="form-control"
+			>
+		</div>
+	</div>
+	<button type="button" class="btn btn-primary mb-5" id="current"> Posicion Actual</button>
+	<div id="g-map" style="width: 500px; height: 400px;"></div>
+
+    <div class="form-group mt-5">
       <button type="submit" class="btn btn-primary">Guardar</button>
     </div>
 </form>
 
-<input id="map-address">
-<button type="button" onclick="currentLocation()"> Aqui</button>
-<div id="somecomponent" style="width: 500px; height: 400px;"></div>
+
 {% endblock content %}
 {% block scripts %}
 	<script type="text/javascript" src='https://maps.google.com/maps/api/js?sensor=false&libraries=places&key=AIzaSyBIPRP1nZtRNuSSGzaANaE5GJIWo_BP_lc'></script>
 	<script src="{% static 'js/jquery-locationpicker-plugin/dist/locationpicker.jquery.js' %}"></script>
 	<script>
-		$('#somecomponent').locationpicker({
+		$('#g-map').locationpicker({
 			location: {
 				latitude: 4.304709,
 				longitude: -74.803034
@@ -39,27 +50,28 @@
 		});
 	</script>
 	<script type="text/javascript">
-		function localizacion(posicion){
-			console.log(posicion)
+		function localizacion(posicion, event){
+			alertify.success("Posición Encontrada")
+			console.warn(posicion, event)
 
 			var latitude = posicion.coords.latitude;
 			var longitude = posicion.coords.longitude;
-			//alert("tu latitude es: "+latitude+ "tu longitude es: " +longitude );
-			//output.innerHTML = "<p>latitude:  "+ latitude+ "<br>longitude:  "+ longitude+"</p>";
 
-			$("#id_pos_x").val(latitude).change()
-			$("#id_pos_y").val(longitude).change()
-
+			event.type = "change"
+			$("#id_pos_x").val(latitude).trigger(event)
+			$("#id_pos_y").val(longitude).trigger(event)
 
 		}
 
 		function error(){
-			//output.innerHTML = "<p> no se pudo obtener tu ubicacion</p>";
-			alert("No se puedo obtener la posicion actual");
+			alertify.error("Error encontrando la posición.")
 		}
 
-		function currentLocation(){
-			navigator.geolocation.getCurrentPosition(localizacion, error);
-		}
+		$("#current").click(function(event){
+			alertify.success("Buscando posición...")
+			navigator.geolocation.getCurrentPosition((position) => {
+				localizacion(position, event)
+			}, error);
+		})
 	</script>
 {% endblock scripts %}
