--- a/facturacion/templates/reportes/ventasTotal.html
+++ b/facturacion/templates/reportes/ventasTotal.html
@@ -31,10 +31,36 @@
 			</tr>
 		</tbody>
 	</table>
+<div id="piechart" style="width: 900px; height: 500px;"></div>
 
 {% endblock content %}
 
 {% block scripts %}
-	<script type="text/javascript">
-	</script>
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script type="text/javascript">
+	google.charts.load('current', { packages: ['corechart', 'bar'] });
+
+	google.charts.setOnLoadCallback(drawChart);
+
+	function drawChart() {
+		var header = [['Mes', 'Ventas']];
+		var data = {{ json| safe }};
+
+	var final = header.concat(data)
+	console.log(final)
+	var data = google.visualization.arrayToDataTable(final);
+
+	var options = {
+		title: `
+				Ventas Mensuales {% if config.cliente %} a {{ config.cliente.nombre }} {% endif %}
+				desde {{ config.fini }} hasta {{ config.ffin }}
+			`
+	};
+
+	// var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+	var chart = new google.visualization.ColumnChart(document.getElementById('piechart'));
+
+	chart.draw(data, options);
+	}
+</script>
 {% endblock scripts %}
