--- a/rutas/templates/rutas.html
+++ b/rutas/templates/rutas.html
@@ -115,7 +115,7 @@
 					controls_type: 'dropdown',
 					controls_on_map: false,
 					view_all_text: 'Vista General',
-					type: 'polyline'
+					type: 'directions'
 				}).Load();
 		}
 	})
