--- a/facturacion/templates/factura/listar.html
+++ b/facturacion/templates/factura/listar.html
@@ -1,4 +1,5 @@
 {% extends 'AdminLTE/index.html' %}
+{% load humanize %}
 
 {% block content %}
 	<h1>Factura</h1>
@@ -6,7 +7,6 @@
 	<table class="table">
 		<thead>
 			<tr>
-				
 				<th>Id</th>
 				<th>Fecha</th>
 				<th>Fecha Actualización</th>
@@ -17,11 +17,12 @@
 			{% for factura in object_list %}
 				<tr>
 					<td>{{ factura.pk }}</td>
-					<td>{{ factura.fecha_creacion }}</td>
-					<td>{{ factura.factualizacion }}</td>
-					<td>{{ factura.valor_total }}</td>
+					<td>{{ factura.fecha_creacion | date:'Y-m-d' }}</td>
+					<td>{{ factura.factualizacion | date:'Y-m-d' }}</td>
+					<td>{{ factura.valor_total | intcomma}}</td>
 
 					<td><a href="{% url 'ver_factura_detalle' factura.pk %}">Ver</a></td>
+					<td><a href="{% url 'factura_imprimir' factura.pk %}">Imprimir</a></td>
 				</tr>
 			{% empty %}
 				<tr>
