--- a/base/templates/AdminLTE/index.html
+++ b/base/templates/AdminLTE/index.html
@@ -36,6 +36,8 @@
   <link rel="stylesheet" href="{% static 'alertifyjs/css/alertify.min.css' %}">
   <link rel="stylesheet" href="{% static 'alertifyjs/css/themes/bootstrap.min.css' %}">
 
+  <link rel="stylesheet" href="{% static 'vue/vue-good-table/vue-good-table.css' %}">
+
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -556,7 +558,11 @@
 <script src="{% static 'alertifyjs/alertify.min.js' %}"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="{% static 'js/qs.js' %}"></script>
+
 <script src="{% static 'js/vue.js' %}"></script>
+<script src="{% static 'vue/vue-good-table/vue-good-table.min.js' %}"></script>
+<script src="{% static 'vue/vue-currency-filter/VueCurrencyFilter.bundle.js' %}"></script>
+
 <script src="{% static 'js/axios.min.js' %}"></script>
 <!--<script src="{% static '/js/vue.min.js' %}"></script>-->
 <script src="{% static 'js/AdminLTE/dist/demo.js' %}"></script>
