--- a/base/templates/productos/listar.html
+++ b/base/templates/productos/listar.html
@@ -2,37 +2,53 @@
 
 {% block content %}
 	<h1>Productos</h1>
+		<vue-good-table
+			:columns="productos.lista.tabla.columns"
+			:rows="productos.items"
+			:search-options="{
+				enabled: true,
+				trigger: 'enter',
+				placeholder: 'Buscar',
+			}"
+			:pagination-options="{
+				enabled: true,
+				perPage: 5,
+				nextLabel: 'Sig',
+				prevLabel: 'Ant',
+				rowsPerPageLabel: 'Por pagina',
+				ofLabel: 'de',
+				allLabel: 'Todos',
+			}"
+			styleClass="vgt-table striped bordered"
+		>
+			<template slot="table-row" slot-scope="props">
+				<span v-if="props.column.field == 'nombre'">
+					[[props.row.nombre]]
+				</span>
+				<span v-if="props.column.field == 'cantidad'">
+					[[props.row.cantidad]]
+				</span>
+				<span v-if="props.column.field == 'precio'">
+					[[props.row.precio | currency]]
+				</span>
+				<span v-if="props.column.field == 'fecha'">
+					[[props.row.fecha | formatDate]]
+				</span>
+				<span v-if="props.column.field == 'editar'">
+					<a :href="`/productos/actualizar/${props.row.pk}`">Editar</a>
+				</span>
+				<span v-if="props.column.field == 'borrar'">
+					<a :href="`/productos/borrar/${props.row.pk}`">Borrar</a>
+				</span>
+				<span v-if="props.column.field == 'historial'">
+					<a :href="`/movimiento/historial/${props.row.pk}`">Historial</a>
+				</span>
+			</template>
+			<div slot="emptystate">
+				Sin Datos.
+			</div>
+		</vue-good-table>
 
-	<table class="table">
-		<thead>
-			<tr>
-				<th>Nombre</th>
-				<th>Cantidad</th>
-				<th>Precio</th>
-				<th>Fecha</th>
-				<th>Editar</th>
-				<th>Borrar</th>
-				<th>Historial</th>
-			</tr>
-		</thead>
-		<tbody>
-			{% for producto in object_list %}
-				<tr>
-					<td>{{ producto.nombre }}</td>
-					<td>{{ producto.cantidad }}</td>
-					<td>{{ producto.precio }}</td>
-					<td>{{ producto.fecha }}</td>
-					<td><a href="{% url 'actualizar_producto' producto.pk %}">Editar</a></td>
-					<td><a href="{% url 'borrar_producto' producto.pk %}">Borrar</a></td>
-					<td><a href="{% url 'movimiento_historial_producto' producto.pk %}">Historial</a></td>
-				</tr>
-			{% empty %}
-				<tr>
-					<td>Sin Porductos</td>
-				</tr>
-			{% endfor %}
-		</tbody>
-	</table>
 	<a class="btn btn-success" href="{% url 'crear_producto' %}">Nuevo</a>
 
 {% endblock content %}
