--- a/catalogo/templates/catalogo/listar.html
+++ b/catalogo/templates/catalogo/listar.html
@@ -15,11 +15,11 @@
 			{% for catalogo in object_list %}
 				<tr>
 					<td>{{ catalogo.pk }}</td>
-					<td>{{ catalogo.fecha_creacion }}</td>
-					<td>{{ catalogo.factualizacion }}</td>
+					<td>{{ catalogo.fecha_creacion | date:'Y-m-d' }}</td>
+					<td>{{ catalogo.factualizacion | date:'Y-m-d' }}</td>
 					<td><a href="{% url 'ver_catalogo_detalle' catalogo.pk %}">Ver</a></td>
 					<td><a href="{% url 'borrar_catalogo' catalogo.pk %}">Borrar</a></td>
-					
+
 				</tr>
 			{% empty %}
 				<tr>
