commit de apoyo

--- a/facturacion/templates/factura/imprimir.html
+++ b/facturacion/templates/factura/imprimir.html
@@ -103,7 +103,7 @@
 						<tr>
 							<td>
 								<b>Tienda: </b>{{ objfactura.cliente.nombre_tienda }}
-								<br> <b>Dirección: </b> {{ objfactura.cliente.direccion }}
+								<br> <b>Direccion: </b> {{ objfactura.cliente.direccion }}
 							</td>
 
 							<td>
